fix full width gallery vertical overlap

--- a/themes/fonorobert.com-theme/assets/css/gallery.css
+++ b/themes/fonorobert.com-theme/assets/css/gallery.css
@@ -22,6 +22,7 @@
 
 .gallery.full-width figure {
   max-width: 100%;
+  max-height: 100%;
 }
 
 .gallery a {
